Adding a dependency for the library on libindicator

--- a/configure.ac
+++ b/configure.ac
@@ -53,6 +53,7 @@ AC_SUBST(INDICATOR_CFLAGS)
 AC_SUBST(INDICATOR_LIBS)
 
 PKG_CHECK_MODULES(LIBRARY, gtk+-2.0 >= $GTK_REQUIRED_VERSION
+                           indicator >= $INDICATOR_REQUIRED_VERSION
                            dbus-glib-1 >= $DBUS_GLIB_REQUIRED_VERSION
                            dbusmenu-gtk >= $DBUSMENUGTK_REQUIRED_VERSION)
 
