--- a/configure.ac
+++ b/configure.ac
@@ -1,11 +1,11 @@
 
-AC_INIT(indicator-application, 0.2.9, ted@canonical.com)
+AC_INIT(libappindicator, 0.2.90, ted@canonical.com)
 AC_COPYRIGHT([Copyright 2009, 2010 Canonical])
 
 AC_PREREQ(2.53)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(indicator-application, 0.2.9)
+AM_INIT_AUTOMAKE(libappindicator, 0.2.90)
 
 AM_MAINTAINER_MODE
 
@@ -213,7 +213,7 @@ docs/reference/libappindicator-docs.sgml
 
 AC_MSG_NOTICE([
 
-Application Indicator Configuration:
+Libappindicator Configuration:
 
 	Prefix:        $prefix
 	Indicator Dir: $INDICATORDIR
