--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
-SUBDIRS = data		\
-          src		\
+SUBDIRS = \
+      src		\
 	  bindings	\
 	  example	\
 	  tests		\
@@ -12,7 +12,6 @@ EXTRA_DIST = \
 	xmldocs.make \
 	autogen.sh \
 	COPYING.LGPL.2.1 \
-	COPYING.LGPL.3 \
 	ChangeLog
 
 DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --enable-localinstall --enable-introspection
