Migrating to the LIBRARY flags

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -10,10 +10,10 @@ simple_client_SOURCES = \
 	simple-client.c
 
 simple_client_CFLAGS = \
-	$(INDICATOR_CFLAGS) \
+	$(LIBRARY_CFLAGS) \
 	-Wall -Werror \
 	-I$(top_srcdir)/src
 
 simple_client_LDADD = \
-	$(INDICATOR_LIBS) \
+	$(LIBRARY_LIBS) \
 	$(top_builddir)/src/libappindicator.la
