--- a/configure.ac
+++ b/configure.ac
@@ -39,9 +39,10 @@ AC_CONFIG_MACRO_DIR(m4)
 
 GTK_REQUIRED_VERSION=2.18
 GTK3_REQUIRED_VERSION=2.91
+GLIB_REQUIRED_VERSION=2.26
 GIO_REQUIRED_VERSION=2.26
 INDICATOR_REQUIRED_VERSION=0.3.5
-DBUSMENUGTK_REQUIRED_VERSION=0.2.2
+DBUSMENUGTK_REQUIRED_VERSION=0.3.90
 DBUS_GLIB_REQUIRED_VERSION=0.82
 
 AC_ARG_WITH([gtk],
@@ -50,19 +51,21 @@ AC_ARG_WITH([gtk],
   [],
   [with_gtk=2])
 AS_IF([test "x$with_gtk" = x3],
-        [PKG_CHECK_MODULES(LIBRARAY,  gtk+-3.0 >= $GTK3_REQUIRED_VERSION
-                                      gio-2.0 >= $GIO_REQUIRED_VERSION
-                                      indicator3 >= $INDICATOR_REQUIRED_VERSION
-                                      dbusmenu-gtk3 >= $DBUSMENUGTK_REQUIRED_VERSION)
+        [PKG_CHECK_MODULES(LIBRARY,  gtk+-3.0 >= $GTK3_REQUIRED_VERSION
+                                     glib-2.0 >= $GLIB_REQUIRED_VERSION
+                                     gio-2.0 >= $GIO_REQUIRED_VERSION
+                                     indicator3 >= $INDICATOR_REQUIRED_VERSION
+                                     dbusmenu-gtk3-0.4 >= $DBUSMENUGTK_REQUIRED_VERSION)
          AC_SUBST(LIBRARY_CFLAGS)
          AC_SUBST(LIBRARY_LIBS)
          AC_DEFINE(HAVE_GTK3, 1, [whether gtk3 is available])
         ],
       [test "x$with_gtk" = x2],
         [PKG_CHECK_MODULES(LIBRARY,  gtk+-2.0 >= $GTK_REQUIRED_VERSION
+                                     glib-2.0 >= $GLIB_REQUIRED_VERSION
                                      gio-2.0 >= $GIO_REQUIRED_VERSION
                                      indicator >= $INDICATOR_REQUIRED_VERSION 
-                                     dbusmenu-gtk >= $DBUSMENUGTK_REQUIRED_VERSION)
+                                     dbusmenu-gtk-0.4 >= $DBUSMENUGTK_REQUIRED_VERSION)
          AC_SUBST(LIBRARY_CFLAGS)
          AC_SUBST(LIBRARY_LIBS)
         ],
@@ -217,4 +220,5 @@ Libappindicator Configuration:
 	Prefix:        $prefix
 	Indicator Dir: $INDICATORDIR
 	GTK+ Version:  $with_gtk
+	Library CFlags: $LIBRARY_CFLAGS
 ])
