--- a/.bzrignore
+++ b/.bzrignore
@@ -96,10 +96,10 @@ bindings/mono/AppIndicator.Test.dll
 bindings/mono/libappindicator-api.middle
 bindings/mono/examples/IndicatorExample.exe
 src/app-indicator-enum-types.gen.c
-indicator-application-[0-9].[0-9].[0-9].tar.gz
-indicator-application-[0-9].[0-9].[0-9].tar.gz.asc
-indicator-application-[0-9].[0-9].[0-9][0-9].tar.gz
-indicator-application-[0-9].[0-9].[0-9][0-9].tar.gz.asc
+libappindicator-[0-9].[0-9].[0-9].tar.gz
+libappindicator-[0-9].[0-9].[0-9].tar.gz.asc
+libappindicator-[0-9].[0-9].[0-9][0-9].tar.gz
+libappindicator-[0-9].[0-9].[0-9][0-9].tar.gz.asc
 m4/gtk-doc.m4
 src/AppIndicator-0.1.gir
 src/AppIndicator-0.1.typelib
