--- a/Makefile.in
+++ b/Makefile.in
@@ -130,7 +130,6 @@ CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CSC = @CSC@
 CYGPATH_W = @CYGPATH_W@
-DBUSSERVICEDIR = @DBUSSERVICEDIR@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DSYMUTIL = @DSYMUTIL@
@@ -157,10 +156,6 @@ GTKDOC_REBASE = @GTKDOC_REBASE@
 GTK_SHARP_CFLAGS = @GTK_SHARP_CFLAGS@
 GTK_SHARP_LIBS = @GTK_SHARP_LIBS@
 HTML_DIR = @HTML_DIR@
-INDICATORDIR = @INDICATORDIR@
-INDICATORICONSDIR = @INDICATORICONSDIR@
-INDICATOR_CFLAGS = @INDICATOR_CFLAGS@
-INDICATOR_LIBS = @INDICATOR_LIBS@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -177,6 +172,8 @@ INTROSPECTION_TYPELIBDIR = @INTROSPECTION_TYPELIBDIR@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
+LIBRARY_CFLAGS = @LIBRARY_CFLAGS@
+LIBRARY_LIBS = @LIBRARY_LIBS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LIB_PREFIX = @LIB_PREFIX@
@@ -222,6 +219,8 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+TESTDEPS_CFLAGS = @TESTDEPS_CFLAGS@
+TESTDEPS_LIBS = @TESTDEPS_LIBS@
 VALA_API_GEN = @VALA_API_GEN@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
@@ -280,8 +279,8 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = data		\
-          src		\
+SUBDIRS = \
+      src		\
 	  bindings	\
 	  example	\
 	  tests		\
@@ -294,7 +293,6 @@ EXTRA_DIST = \
 	xmldocs.make \
 	autogen.sh \
 	COPYING.LGPL.2.1 \
-	COPYING.LGPL.3 \
 	ChangeLog
 
 DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --enable-localinstall --enable-introspection
