--- a/docs/reference/Makefile.in
+++ b/docs/reference/Makefile.in
@@ -84,7 +84,6 @@ CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CSC = @CSC@
 CYGPATH_W = @CYGPATH_W@
-DBUSSERVICEDIR = @DBUSSERVICEDIR@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DSYMUTIL = @DSYMUTIL@
@@ -111,10 +110,6 @@ GTKDOC_REBASE = @GTKDOC_REBASE@
 GTK_SHARP_CFLAGS = @GTK_SHARP_CFLAGS@
 GTK_SHARP_LIBS = @GTK_SHARP_LIBS@
 HTML_DIR = @HTML_DIR@
-INDICATORDIR = @INDICATORDIR@
-INDICATORICONSDIR = @INDICATORICONSDIR@
-INDICATOR_CFLAGS = @INDICATOR_CFLAGS@
-INDICATOR_LIBS = @INDICATOR_LIBS@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -131,6 +126,8 @@ INTROSPECTION_TYPELIBDIR = @INTROSPECTION_TYPELIBDIR@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
+LIBRARY_CFLAGS = @LIBRARY_CFLAGS@
+LIBRARY_LIBS = @LIBRARY_LIBS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LIB_PREFIX = @LIB_PREFIX@
@@ -176,6 +173,8 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+TESTDEPS_CFLAGS = @TESTDEPS_CFLAGS@
+TESTDEPS_LIBS = @TESTDEPS_LIBS@
 VALA_API_GEN = @VALA_API_GEN@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
@@ -325,8 +324,8 @@ expand_content_files =
 # signals and properties.
 # e.g. GTKDOC_CFLAGS=-I$(top_srcdir) -I$(top_builddir) $(GTK_DEBUG_FLAGS)
 # e.g. GTKDOC_LIBS=$(top_builddir)/gtk/$(gtktargetlib)
-GTKDOC_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/src $(INDICATOR_CFLAGS)
-GTKDOC_LIBS = $(top_builddir)/src/libappindicator.la $(top_builddir)/src/libapplication.la  $(INDICATOR_LIBS)
+GTKDOC_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/src $(LIBRARY_CFLAGS)
+GTKDOC_LIBS = $(top_builddir)/src/libappindicator.la $(LIBRARY_LIBS)
 @GTK_DOC_USE_LIBTOOL_FALSE@GTKDOC_CC = $(CC) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 @GTK_DOC_USE_LIBTOOL_TRUE@GTKDOC_CC = $(LIBTOOL) --mode=compile $(CC) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 @GTK_DOC_USE_LIBTOOL_FALSE@GTKDOC_LD = $(CC) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS)
