--- a/docs/Makefile.in
+++ b/docs/Makefile.in
@@ -114,7 +114,6 @@ CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CSC = @CSC@
 CYGPATH_W = @CYGPATH_W@
-DBUSSERVICEDIR = @DBUSSERVICEDIR@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DSYMUTIL = @DSYMUTIL@
@@ -141,10 +140,6 @@ GTKDOC_REBASE = @GTKDOC_REBASE@
 GTK_SHARP_CFLAGS = @GTK_SHARP_CFLAGS@
 GTK_SHARP_LIBS = @GTK_SHARP_LIBS@
 HTML_DIR = @HTML_DIR@
-INDICATORDIR = @INDICATORDIR@
-INDICATORICONSDIR = @INDICATORICONSDIR@
-INDICATOR_CFLAGS = @INDICATOR_CFLAGS@
-INDICATOR_LIBS = @INDICATOR_LIBS@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -161,6 +156,8 @@ INTROSPECTION_TYPELIBDIR = @INTROSPECTION_TYPELIBDIR@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
+LIBRARY_CFLAGS = @LIBRARY_CFLAGS@
+LIBRARY_LIBS = @LIBRARY_LIBS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LIB_PREFIX = @LIB_PREFIX@
@@ -206,6 +203,8 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+TESTDEPS_CFLAGS = @TESTDEPS_CFLAGS@
+TESTDEPS_LIBS = @TESTDEPS_LIBS@
 VALA_API_GEN = @VALA_API_GEN@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
