--- a/example/Makefile.in
+++ b/example/Makefile.in
@@ -108,7 +108,6 @@ CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CSC = @CSC@
 CYGPATH_W = @CYGPATH_W@
-DBUSSERVICEDIR = @DBUSSERVICEDIR@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DSYMUTIL = @DSYMUTIL@
@@ -135,10 +134,6 @@ GTKDOC_REBASE = @GTKDOC_REBASE@
 GTK_SHARP_CFLAGS = @GTK_SHARP_CFLAGS@
 GTK_SHARP_LIBS = @GTK_SHARP_LIBS@
 HTML_DIR = @HTML_DIR@
-INDICATORDIR = @INDICATORDIR@
-INDICATORICONSDIR = @INDICATORICONSDIR@
-INDICATOR_CFLAGS = @INDICATOR_CFLAGS@
-INDICATOR_LIBS = @INDICATOR_LIBS@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -155,6 +150,8 @@ INTROSPECTION_TYPELIBDIR = @INTROSPECTION_TYPELIBDIR@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
+LIBRARY_CFLAGS = @LIBRARY_CFLAGS@
+LIBRARY_LIBS = @LIBRARY_LIBS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LIB_PREFIX = @LIB_PREFIX@
@@ -200,6 +197,8 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+TESTDEPS_CFLAGS = @TESTDEPS_CFLAGS@
+TESTDEPS_LIBS = @TESTDEPS_LIBS@
 VALA_API_GEN = @VALA_API_GEN@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
@@ -265,13 +264,17 @@ simple_client_SOURCES = \
 	simple-client.c
 
 simple_client_CFLAGS = \
-	$(INDICATOR_CFLAGS) \
+	$(LIBRARY_CFLAGS) \
+	-DLOCAL_ICON="\"$(abs_srcdir)/simple-client-test-icon.png\"" \
 	-Wall -Werror \
 	-I$(top_srcdir)/src
 
 simple_client_LDADD = \
-	$(INDICATOR_LIBS) \
+	$(LIBRARY_LIBS) \
 	$(top_builddir)/src/libappindicator.la
+
+EXTRA_DIST = \
+	simple-client-test-icon.png
 
 all: all-am
 
