--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Build-Depends: debhelper (>= 5.0),
                libindicate-dev (>= 0.2.0),
                libindicate-gtk-dev (>= 0.2.0),
                libindicator-dev (>= 0.3.14),
-               libdbusmenu-gtk-dev (>= 0.3.90),
-               libdbusmenu-glib-dev (>= 0.3.90),
+               libdbusmenu-gtk-dev (>= 0.3.90+r175),
+               libdbusmenu-glib-dev (>= 0.3.90+r175),
                cli-common-dev (>= 0.5.7),
                mono-devel (>= 2.4.3),
                gtk-sharp2-gapi,
@@ -32,6 +32,20 @@ Build-Depends: debhelper (>= 5.0),
 Standards-Version: 3.8.4
 Homepage: https://launchpad.net/indicator-application
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-desktop/indicator-application/ubuntu
+
+Package: python-appindicator
+Section: python
+Architecture: any
+XB-Python-Version: ${python:Versions}
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         ${python:Depends},
+         libappindicator1 (= ${binary:Version}),
+         python-gobject
+Provides: ${python:Provides}
+Description: Python bindings for libappindicator
+ This package provides Python bindings so that you can use libappindicator from 
+ a Python program.
 
 Package: libappindicator1
 Section: libs
@@ -111,17 +125,3 @@ Description: Typelib files for libappindicator1.
  .
  This package can be used by other packages using the GIRepository format
  to generate dynamic bindings.
-
-Package: python-appindicator
-Section: python
-Architecture: any
-XB-Python-Version: ${python:Versions}
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         ${python:Depends},
-         libappindicator1 (= ${binary:Version}),
-         python-gobject
-Provides: ${python:Provides}
-Description: Python bindings for libappindicator
- This package provides Python bindings so that you can use libappindicator from 
- a Python program.
