--- a/src/appindicator3-0.1.pc.in
+++ b/src/appindicator3-0.1.pc.in
@@ -5,7 +5,7 @@ bindir=@bindir@
 includedir=@includedir@
 
 Cflags: -I${includedir}/libappindicator3-0.1
-Requires: dbusmenu-glib gtk+-3.0
+Requires: dbusmenu-glib-0.4 gtk+-3.0
 Libs: -L${libdir} -lappindicator3
 
 Name: appindicator3-0.1
