Adding vala bindings and example
Adding proper support for vala bindings, fixing the include path
Now they are built in the bindings subfolder and they
include a *.deps file.
and I've also added a small example.

--- a/configure.ac
+++ b/configure.ac
@@ -96,6 +96,13 @@ AM_CONDITIONAL(INTROSPECTION_TEN, [test "x$introspection_ten" = "xyes"])
 AC_PATH_PROG([VALA_API_GEN], [vapigen])
 
 ###########################
+# Vala Compiler support
+###########################
+
+AM_PROG_VALAC([0.11.0])
+AM_CONDITIONAL(HAVE_VALAC, [test "x$VALAC" != "x"])
+
+###########################
 # Check for Mono support
 ###########################
 
@@ -205,6 +212,8 @@ bindings/mono/appindicator-sharp-0.1.pc
 bindings/mono/examples/Makefile
 bindings/mono/examples/indicator-example
 bindings/python/Makefile
+bindings/vala/Makefile
+bindings/vala/examples/Makefile
 tests/Makefile
 example/Makefile
 docs/Makefile
