Changing the build to be the check instead of running it as we might not be interactive.

--- a/bindings/vala/examples/Makefile.am
+++ b/bindings/vala/examples/Makefile.am
@@ -1,5 +1,4 @@
 
-TESTS = indicator-example
 VALAFILES = indicator-example.vala
 CLEANFILES = $(TESTS) *.c
 EXTRA_DIST = $(VALAFILES)
@@ -7,8 +6,8 @@ EXTRA_DIST = $(VALAFILES)
 VALAFLAGS = --pkg appindicator-0.1 --vapidir=$(top_builddir)/bindings/vala --save-temps
 
 if HAVE_VALAC
-$(TESTS): $(VALAFILES) Makefile.am
+indicator-example: $(VALAFILES) Makefile.am
 	$(VALAC) $(VALAFLAGS) $(srcdir)/$(VALAFILES)
 
-all: $(TESTS)
+check: indicator-example
 endif
