Examples, added simple-client-vala
A rewrite of the simple-client.c version in Vala as example.

Added a workaround for compiling it.

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -4,9 +4,11 @@ else
 VER=
 endif
 
+CLEANFILES =
 
 check_PROGRAMS = \
-	simple-client
+	simple-client \
+	simple-client-vala
 
 #########################################
 ##  simple-client
@@ -27,3 +29,25 @@ simple_client_LDADD = \
 
 EXTRA_DIST = \
 	simple-client-test-icon.png
+
+#########################################
+##  simple-client-vala
+#########################################
+
+VALAFLAGS = \
+	--pkg appindicator$(VER)-0.1 \
+	--vapidir=$(top_builddir)/bindings/vala
+
+BUILT_SOURCES = simple-client-vala.c
+simple-client-vala.c: $(srcdir)/simple-client-vala.vala
+	$(VALAC) $(VALAFLAGS) -C $< -o $@
+	$(SED) -i "s|#include\s<libappindicator/app-indicator.h>||g" $@
+
+simple_client_vala_SOURCES = simple-client-vala.c
+simple_client_vala_CFLAGS = \
+	$(simple_client_CFLAGS) \
+	-include $(top_srcdir)/src/app-indicator.h
+
+simple_client_vala_LDADD = $(simple_client_LDADD)
+
+CLEANFILES += *.stamp *-vala.c
