--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Maintainer: Ubuntu Desktop Team <ubuntu-desktop@lists.ubuntu.com>
 Build-Depends: debhelper (>= 7.0),
                cdbs (>= 0.4.41),
                libgtk2.0-dev (>= 2.12.0),
+               libgtk3.0-dev (>= 2.91.3),
                libdbus-glib-1-dev (>= 0.82),
                gnome-doc-utils,
                gtk-doc-tools,
@@ -15,8 +16,10 @@ Build-Depends: debhelper (>= 7.0),
                libindicate-dev (>= 0.2.0),
                libindicate-gtk-dev (>= 0.2.0),
                libindicator-dev (>= 0.3.14),
+               libindicator3-dev (>= 0.3.14),
+               libdbusmenu-glib-dev (>= 0.3.94),
                libdbusmenu-gtk-dev (>= 0.3.94),
-               libdbusmenu-glib-dev (>= 0.3.91),
+               libdbusmenu-gtk3-dev (>= 0.3.94),
                cli-common-dev (>= 0.5.7),
                mono-devel (>= 2.4.3),
                gtk-sharp2-gapi,
@@ -57,6 +60,19 @@ Description: Application Indicators
  the panel.
  .
  This package contains shared libraries to be used by applications.
+
+Package: gir1.2-appindicator-0.1
+Conflicts: gir1.0-appindicator-0.1
+Replaces: gir1.0-appindicator-0.1
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         ${gir:Depends}
+Description: Typelib files for libappindicator1.
+ .
+ This package can be used by other packages using the GIRepository format
+ to generate dynamic bindings.
 
 Package: libappindicator-dev
 Section: libdevel
@@ -114,15 +130,42 @@ Description: Application Indicators
  .
  This package contains files that are needed to build applications.
 
-Package: gir1.2-appindicator-0.1
-Conflicts: gir1.0-appindicator-0.1
-Replaces: gir1.0-appindicator-0.1
+Package: libappindicator3-1
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
+Recommends: indicator-application (= ${binary:Version})
+Description: Application Indicators
+ A library and indicator to take menus from applications and place them in
+ the panel.
+ .
+ This package contains shared libraries to be used by applications.
+
+Package: libappindicator3-dev
+Section: libdevel
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         libdbusmenu-glib-dev (>= 0.1.8),
+         libdbus-glib-1-dev (>= 0.76),
+         libappindicator3-1 (= ${binary:Version})
+Description: Application Indicators
+ A library and indicator to take menus from applications and place them in
+ the panel.
+ .
+ This package contains files that are needed to build applications.
+
+Package: gir1.2-appindicator3-0.1
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${gir:Depends}
-Description: Typelib files for libappindicator1.
+Description: Typelib files for libappindicator3-1.
  .
  This package can be used by other packages using the GIRepository format
  to generate dynamic bindings.
+
+
+
